...
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/custom_border"
            android:orientation="vertical">

            <TextView
                android:id="@+id/postbox_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_border"
                android:text="POST BOX"
                android:textColor="#0808c4"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

...
